Fixed the contact email section on the main page for mobile users. It was adding white space to the whole page for mobile.

--- a/client/src/Components/Home/style.css
+++ b/client/src/Components/Home/style.css
@@ -125,10 +125,15 @@
 
   .parallax {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    height: 110vh;
   }
 
   .helloTitle {
     top: -60px;
     right: 10px;
+  }
+
+  .mobileForm{
+    width: 50%;
   }
 }
